--- a/index.html
+++ b/index.html
@@ -11,8 +11,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>título</h1>
-  <h2>subteste</h2>
-  <a href="#">link</a>
+  <header class="container">
+    <nav id="primary" class="grid grid-flow-col">
+      <div><img src="assets/icons/List.svg" alt="list icon">Menu</div>
+      <div><img src="assets/logo.svg" alt="logo icon"></div>
+      <div>Buscar<img src="assets/icons/MagnifyingGlass.svg" alt="magnifying glass icon"></div>
+    </nav>
+
+    <nav id="secondary" class="grid grid-flow-col">
+      <a href="#">Inteligência Artificial</a>
+      <a href="#">Blockchain</a>
+      <a href="#">Hologramas</a>
+      <a href="#">Internet</a>
+      <a href="#">Vestiveis</a>
+      <a href="#">Realidade Aumentada</a>
+      <a href="#">Realidade Virtual</a>
+    </nav>
+    
+  </header>
 </body>
 </html>
