--- a/index.html
+++ b/index.html
@@ -87,6 +87,45 @@
       </div>
     </section>
 
+    <section id="weekly">
+      <header class="grid grid-flow-col">
+
+        <h3>
+          Mais lidas da semana
+        </h3>
+        <a href="#" class="grid grid-flow-col">
+          <strong>Ver tudo</strong>
+          <span></span>
+        </a>
+      </header>
+
+      <div class="grid gap-16">
+        <figure>
+          <span class="content-tag">veículos</span>
+          <img src="assets/images/Image 06.png" alt="carro futurista">
+          <p>Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoa...</p>
+        </figure>
+
+        <figure>
+          <span class="content-tag">hologramas</span>
+          <img src="assets/images/Image 07.png" alt="mulher conversando com outras pessoas por meio de hologramas">
+          <p>Plataforma de videoconferência apresenta nova função de hologramas, tornando as chama...</p>
+        </figure>
+
+        <figure>
+          <span class="content-tag">realidade virtual</span>
+          <img src="assets/images/Image 08.png" alt="homem utilizando um óculos de realidade virtual ">
+          <p>Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiên...</p>
+        </figure>
+
+        <figure>
+          <span class="content-tag">internet</span>
+          <img src="assets/images/Image 09.png" alt="satélite orbitando o planeta terra">
+          <p>Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.</p>
+        </figure>
+      </div>
+    </section>
+
   </main>
 </body>
 </html>
