fix image problem

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
     <aside>
       <div id="ads">
-        <img src="/assets/images/Ads.png" alt="ads">
+        <img src="../assets/images/Ads.png" alt="ads">
       </div>
       
       <section id="more">
